# space

./: .create.sql  .gitignore  .space  Cargo.toml  README.md  Vagrantfile  create_db
bots/: test
migrations/1_create_masses/: down.sql  up.sql
migrations/2_create_users/: up.sql
postgres/: .pgadmin3  .pgpass  bootstrap.sh  pg_hba.conf  pgadmin.sh  postgresql.conf
src/: astroid.rs  connection.rs  constants.rs  dashboard.rs  db.rs  engines.rs  entities.rs  forms.rs  item.rs  lib.rs  main.rs  mass.rs  masses.rs  masses_db.rs  math.rs  mining.rs  models.rs  module.rs  navigation.rs  request.rs  requests.rs  response.rs  schema.rs  server_connection.rs  ship.rs  storage.rs  systems.rs  targeting.rs
src/client/: construction.rs  dashboard.rs  engines.rs  mining.rs  mod.rs  navigation.rs  refinery.rs  tractorbeam.rs  types.rs
src/components/: construction.rs  dashboard.rs  engines.rs  mining.rs  misc.rs  mod.rs  navigation.rs  refinery.rs  storage.rs  tractorbeam.rs  types.rs
src/modules/: construction.rs  dashboard.rs  engines.rs  mining.rs  mod.rs  navigation.rs  refinery.rs  tractorbeam.rs  types.rs
src/server/: connection.rs  construction.rs  dashboard.rs  engines.rs  mining.rs  mod.rs  navigation.rs  refinery.rs  tractorbeam.rs
static/: style.css
templates/: 404.html  base.html  controlpanel.html  docs.html  index.html  leaderboards.html  login.html  register.html  user.html
tests/: db.rs  modules.rs  tests.rs
