[package]
name = "space"
version = "0.1.0"
authors = ["tom barrett <spalf0@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termion = "1.5.2"
rand = "0.6.5"
toml = "0.5"
clap = "2.33"
actix-web = "1.0.0"
actix-files = "0.1.1"
tera = "0.11"
diesel = {version = "1.4.2", features = ["postgres", "r2d2"]}
migrations_internals = "1.4.0"
ring = "0.14.6"
data-encoding = "2.1.2"
