[package]
name = "space"
version = "0.1.0"
authors = ["tom barrett <spalf0@gmail.com>"]
edition = "2018"
default-run = "server"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termion = "*"
rand = "0.6"
toml = "0.4"
clap = "2"
diesel = {version = "1.4.2", features = ["postgres"]}
migrations_internals = "1.4.0"
legion = "0.2.1"
